# ProcessManager

./: package-lock.json  package.json
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: help.rs  main.rs
src/Components/: Navbar.css  Navbar.jsx  Process.jsx
